[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/mobs/wolf/wolf.gd" type="Script" id=1]
[ext_resource path="res://assets/mobs/wolf/wolf.png" type="Texture" id=2]
[ext_resource path="res://assets/mobs/wolf/states/motion/on_ground/idle.gd" type="Script" id=3]
[ext_resource path="res://assets/mobs/wolf/states/motion/on_ground/move.gd" type="Script" id=4]
[ext_resource path="res://assets/mobs/wolf/states/motion/in_air/jump.gd" type="Script" id=5]
[ext_resource path="res://assets/mobs/wolf/states/motion/on_ground/follow.gd" type="Script" id=6]
[ext_resource path="res://assets/mobs/wolf/states/action/attack.gd" type="Script" id=7]
[ext_resource path="res://assets/mobs/wolf/states/die.gd" type="Script" id=8]
[ext_resource path="res://assets/mobs/wolf/wolf_cry.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/mobs/wolf/wolf_growl.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]

resource_name = "attack"
length = 2.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0, 0 ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]

length = 2.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 0, 0 ]
}

[sub_resource type="Animation" id=4]

resource_name = "jumping"
length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}

[sub_resource type="Animation" id=5]

length = 1.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sight_distance_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 180.0, 225.0, 180.0, 135.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sight_distance_right:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 0.0, 45.0 ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="CapsuleShape2D" id=7]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[node name="wolf" type="KinematicBody2D"]

input_pickable = false
collision_layer = 4
collision_mask = 19
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility", "Z Index", "collision" ]
look_direction = Vector2( -1, 0 )

[node name="visibility" type="VisibilityEnabler2D" parent="." index="0"]

position = Vector2( -4.99999, -5 )
scale = Vector2( 19.5, 6.5 )
rect = Rect2( -10, -10, 20, 20 )
pause_animations = true
freeze_bodies = true
pause_particles = false
pause_animated_sprites = true
process_parent = false
physics_process_parent = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="anim" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack = SubResource( 1 )
anims/dead = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jumping = SubResource( 4 )
anims/walk = SubResource( 5 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="sprite" type="Sprite" parent="." index="2"]

texture = ExtResource( 2 )
vframes = 2
hframes = 2
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="collision_body_left" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -10, 14.2609 )
scale = Vector2( 3.84615, 1.71237 )
shape = SubResource( 6 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="collision_body_right" type="CollisionShape2D" parent="." index="4"]

visible = false
position = Vector2( 10, 14.2609 )
scale = Vector2( 3.84615, 1.71237 )
shape = SubResource( 6 )
disabled = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="collision_head_left" type="CollisionShape2D" parent="." index="5"]

position = Vector2( -43.5, -20 )
scale = Vector2( 1.26923, 0.5 )
shape = SubResource( 7 )

[node name="collision_head_right" type="CollisionShape2D" parent="." index="6"]

visible = false
position = Vector2( 43.5, -20 )
scale = Vector2( 1.26923, 0.5 )
shape = SubResource( 7 )
disabled = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="detect_wall_left" type="RayCast2D" parent="." index="7"]

position = Vector2( -25, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( -50, 0 )
collision_mask = 17
_sections_unfolded = [ "Transform" ]

[node name="detect_player_left" type="RayCast2D" parent="." index="8"]

position = Vector2( -26.1479, 2.55803e-007 )
enabled = true
exclude_parent = true
cast_to = Vector2( -50, 0 )
collision_mask = 2
_sections_unfolded = [ "Transform" ]

[node name="detect_floor_left" type="RayCast2D" parent="." index="9"]

position = Vector2( -50, -8 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1

[node name="detect_ceiling_left" type="RayCast2D" parent="." index="10"]

position = Vector2( -50, -23 )
rotation = 2.61799
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 15 )
collision_mask = 17
_sections_unfolded = [ "Transform" ]

[node name="detect_floor_right" type="RayCast2D" parent="." index="11"]

visible = false
position = Vector2( 30, -10 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="detect_wall_right" type="RayCast2D" parent="." index="12"]

visible = false
position = Vector2( 30, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 17
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="detect_ceiling_right" type="RayCast2D" parent="." index="13"]

visible = false
position = Vector2( 50, -23 )
rotation = -0.785398
enabled = true
exclude_parent = true
cast_to = Vector2( 15, 0 )
collision_mask = 17
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="detect_player_right" type="RayCast2D" parent="." index="14"]

visible = false
position = Vector2( 31.2312, 0 )
scale = Vector2( 1, 0.991214 )
enabled = true
exclude_parent = true
cast_to = Vector2( 50, 0 )
collision_mask = 2
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="sight_distance_left" type="RayCast2D" parent="." index="15"]

position = Vector2( -80, 0 )
rotation = 3.04728
enabled = true
exclude_parent = true
cast_to = Vector2( 400, 0 )
collision_mask = 2
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="sight_distance_right" type="RayCast2D" parent="." index="16"]

visible = false
position = Vector2( 86, 0 )
rotation = 0.0943147
enabled = true
exclude_parent = true
cast_to = Vector2( 400, 0 )
collision_mask = 2
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="mob_states" type="Node" parent="." index="17"]

[node name="idle" type="Node" parent="mob_states" index="0"]

script = ExtResource( 3 )

[node name="move" type="Node" parent="mob_states" index="1"]

script = ExtResource( 4 )

[node name="jump" type="Node" parent="mob_states" index="2"]

script = ExtResource( 5 )

[node name="follow" type="Node" parent="mob_states" index="3"]

script = ExtResource( 6 )

[node name="attack" type="Node" parent="mob_states" index="4"]

script = ExtResource( 7 )

[node name="die" type="Node" parent="mob_states" index="5"]

script = ExtResource( 8 )

[node name="sound_hit" type="AudioStreamPlayer2D" parent="." index="18"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sound_growl" type="AudioStreamPlayer2D" parent="." index="19"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="timer_attack" type="Timer" parent="." index="20"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="timer_wait_until_follow" type="Timer" parent="." index="21"]

process_mode = 1
wait_time = 0.01
one_shot = true
autostart = false

[node name="state_label" type="Label" parent="." index="22"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = -30.0
margin_right = 93.0
margin_bottom = -16.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "State"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[connection signal="screen_entered" from="visibility" to="." method="_on_visibility_screen_entered"]

[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]

[connection signal="animation_finished" from="anim" to="." method="_on_animation_finished"]

[connection signal="timeout" from="timer_wait_until_follow" to="." method="_on_timer_wait_until_follow_timeout"]


